# ai-pc-training

./: .gitignore  PLAN.md  README.md  setup.ps1
aloha-act/: README.md  main.py  requirements.txt  train.py
gemma3-270m/: README.md  main.py
samples/cpp/asr/: CMakeLists.txt  README.md  audio_utils.cpp  audio_utils.hpp  export_model.py  medasr_medical_asr.cpp
samples/cpp/visual_language_chat/: CMakeLists.txt  MEDGEMMA_SAMPLE.md  README.md  load_image.cpp  load_image.hpp  medgemma_medical_chat.cpp
